<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home2"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="#ac8e65"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guidelineWelcomeBtm"
        app:layout_constraintEnd_toStartOf="@id/userName"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/guidelineWelcomeTop"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txtUserName"
        android:textColor="#ac8e65"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guidelineWelcomeBtm"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/userName"
        app:layout_constraintTop_toBottomOf="@+id/guidelineWelcomeTop"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/guidelineDef"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineWelcomeBtm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/guidelineMobile"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintBottom_toTopOf="@id/guidelinePM"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mobileScore"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_background"
        android:hint="@string/score"
        android:paddingStart="25dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineMobile"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/guidelinePM"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintBottom_toTopOf="@id/guidelineRM"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/pmScore"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_background"
        android:hint="@string/score"
        android:paddingStart="25dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelinePM"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rm"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/guidelineRM"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintBottom_toTopOf="@id/guidelineMS"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/rmScore"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_background"
        android:hint="@string/score"
        android:paddingStart="25dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineRM"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ms"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/guidelineMS"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintBottom_toTopOf="@id/guidelineMis"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/msScore"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_background"
        android:hint="@string/score"
        android:paddingStart="25dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineMS"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mis"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/guidelineMis"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintBottom_toTopOf="@id/guidelineMisEnd"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/misScore"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_background"
        android:hint="@string/score"
        android:paddingStart="25dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/guidelineMis"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="#4d545f"
        android:text="@string/calculate"
        android:textColor="#dfc3a2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineMisEnd"
        tools:ignore="TextSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineWelcomeTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineWelcomeBtm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMisEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />


</androidx.constraintlayout.widget.ConstraintLayout>